--- a/src/app/components/downloadable-content/downloadable-content.component.html
+++ b/src/app/components/downloadable-content/downloadable-content.component.html
@@ -13,32 +13,32 @@
                 <!-- İmages -->
                 <div class="row g-5 mt-2">
                     <div class="col-auto d-flex justify-content-center align-items-center">
-                        <a class="btn btn-outline" href="assets/logo/logo-1.png" target="_blank">
-                            <img src="assets/logo/logo-1.png" width="500" height="500" class="img img-fluid" alt="...">
+                        <a class="btn btn-outline" href="assets/logo/logo-1.webp" target="_blank">
+                            <img src="assets/logo/logo-1.webp" width="500" height="500" class="img img-fluid" alt="...">
                         </a>
                     </div>
 
                     <div class="col-auto d-flex justify-content-center align-items-center">
-                        <a class="btn btn-outline" href="assets/logo/logo-3.png" target="_blank">
-                            <img src="assets/logo/logo-1-en.png" width="500" height="500" class="img img-fluid" alt="...">
+                        <a class="btn btn-outline" href="assets/logo/logo-3.webp" target="_blank">
+                            <img src="assets/logo/logo-1-en.webp" width="500" height="500" class="img img-fluid" alt="...">
                         </a>
                     </div>
 
                     <div class="col-auto d-flex justify-content-center align-items-center">
-                        <a class="btn btn-outline" href="assets/logo/logo-2.png" target="_blank">
-                            <img src="assets/logo/logo-2.png" width="500" height="500" class="img img-fluid" alt="...">
+                        <a class="btn btn-outline" href="assets/logo/logo-2.webp" target="_blank">
+                            <img src="assets/logo/logo-2.webp" width="500" height="500" class="img img-fluid" alt="...">
                         </a>
                     </div>
 
                     <div class="col-auto d-flex justify-content-center align-items-center">
-                        <a class="btn btn-outline" href="assets/logo/logo-2.png" target="_blank">
-                            <img src="assets/logo/logo-2-en.png" width="500" height="500" class="img img-fluid" alt="...">
+                        <a class="btn btn-outline" href="assets/logo/logo-2.webp" target="_blank">
+                            <img src="assets/logo/logo-2-en.webp" width="500" height="500" class="img img-fluid" alt="...">
                         </a>
                     </div>
 
                     <div class="col-auto d-flex justify-content-center align-items-center">
-                        <a class="btn btn-outline" href="assets/logo/logo-3.png" target="_blank">
-                            <img src="assets/logo/logo-3.png" width="500" height="500" class="img img-fluid" alt="...">
+                        <a class="btn btn-outline" href="assets/logo/logo-3.webp" target="_blank">
+                            <img src="assets/logo/logo-3.webp" width="500" height="500" class="img img-fluid" alt="...">
                         </a>
                     </div>
 
