--- a/src/app/components/machine-parkour/machine-parkour.component.html
+++ b/src/app/components/machine-parkour/machine-parkour.component.html
@@ -5,7 +5,7 @@
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
             <div class="card text-white bg-dark h-100">
-                <img src="assets/images/wele-vq650-cnc.jpg" class="card-img-top img img-fluid w-100 h-100" alt="...">
+                <img src="assets/images/wele-vq650-cnc.webp" class="card-img-top img img-fluid w-100 h-100" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{getTranslate('weleCncName')}}</h5>
                     <p class="card-text text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
@@ -16,7 +16,7 @@
         </div>
         <div class="col">
             <div class="card text-white bg-dark h-100">
-                <img src="assets/images/focus-seiki-vmc650-cnc.png" class="card-img-top img w-100 h-100" alt="...">
+                <img src="assets/images/focus-seiki-vmc650-cnc.webp" class="card-img-top img w-100 h-100" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{getTranslate('focusSeikiCncName')}}</h5>
                     <p class="card-text text-muted" style="overflow-wrap: break-word; white-space: pre-wrap;">
