--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -96,25 +96,25 @@
                     <h3>{{getTranslate("contact")}}</h3>
                     <ul class="list-unstyled">
                         <li class="mb-2">
-                            <a class="link-dark unlink" href="mailto:{{getTranslate('email2FromDb')}}">
+                            <a class="link-dark link" href="mailto:{{getTranslate('email2FromDb')}}">
                                 <i class="fa fa-envelope me-1"></i>
                                 {{getTranslate('email2FromDb')}}
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark unlink" href="mailto:{{getTranslate('email1FromDb')}}">
+                            <a class="link-dark link" href="mailto:{{getTranslate('email1FromDb')}}">
                                 <i class="fa fa-envelope me-1"></i>
                                 {{getTranslate('email1FromDb')}}
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark unlink" href="tel:{{getTranslate('gsmFromDb')}}">
+                            <a class="link-dark link" href="tel:{{getTranslate('gsmFromDb')}}">
                                 <i class="fa fa-phone me-1"></i>
                                 {{getTranslate('gsmFromDb')}}
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark unlink">
+                            <a class="link-dark link">
                                 <i class="fa fa-phone me-1"></i>
                                 {{getTranslate('phoneNumberFromDb')}}
                             </a>
@@ -130,24 +130,31 @@
                 </div> -->
             </div>
 
-            <hr>
-
-            <div class="container">
-                <div class="row" style="font-size: 14px;">
-                    <div class="col-md-8 col-sm-12 text-start col-xs-6 ">
-                        <p class="font-italic text-muted text-start">&copy; Copyrights
-                            <a class="link-dark unlink" href="#">allentplastik.com</a>
-                            All rights reserved.
-                        </p>
-                    </div>
-
-                    <div class="col-md-4 col-sm-12 text-start col-xs-6">
-                        <p class="font-italic text-muted">
-                            Designed by
-                            <a class="link-dark unlink" href="mailto:dagbfatih@hotmail.com">&#x40;Dagbfatih</a>
-                        </p>
-                    </div>
+            <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                        <img src="assets/logo/allent-logo-lg.webp" height="24"
+                            class="d-inline-block align-text-top me-2">
+                    </a> -->
+                    <span class="text-muted">
+                        Copyrights
+                        <a class="link-dark link" href="#">allentplastik.com</a>
+                        All rights reserved.
+                    </span>
                 </div>
+
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                    <li class="ms-3">
+                        <a class="text-muted" href="https://wa.me/905425190940">
+                            <i class="fa fa-whatsapp" style="font-size: 24px;"></i>
+                        </a>
+                    </li>
+                    <li class="ms-3">
+                        <a class="text-muted" href="https://www.instagram.com/allentplastik/">
+                            <i class="fa fa-instagram" style="font-size: 24px;"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
