--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -154,6 +154,12 @@
                             <i class="fa fa-instagram" style="font-size: 24px;"></i>
                         </a>
                     </li>
+                    <li class="mb-3"> 
+                        <span class="text-muted ms-3">
+                            Designed by
+                            <a class="link-dark link" href="mailto:dagbfatih@hotmail.com">dagbfatih@hotmail.com</a>
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
