--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -119,6 +119,12 @@
                                 {{getTranslate('phoneNumberFromDb')}}
                             </a>
                         </li>
+                        <li class="mb-2">
+                            <a class="link-dark link-decoration-none">
+                                <i class="fa fa-map-marker me-1"></i>
+                                {{getTranslate('addressFromDb')}}
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- <div class="col-6 col-lg-1 mb-3">
@@ -155,7 +161,7 @@
                         </a>
                     </li>
                     <li class="mb-3"> 
-                        <span class="text-muted ms-3">
+                        <span class="text-muted ms-2">
                             Designed by
                             <a class="link-dark link" href="mailto:dagbfatih@hotmail.com">dagbfatih@hotmail.com</a>
                         </span>
